--- a/Play/python_arithmetic_operators.html
+++ b/Play/python_arithmetic_operators.html
@@ -296,7 +296,7 @@
                 symbol: '+',
                 name: 'Addition',
                 description: 'Adds two numbers together. The most basic arithmetic operation.',
-                example: 'result = 5 + 3  # Returns 8',
+                example: 'result = 5 + 3',
                 defaultA: 5,
                 defaultB: 3
             },
@@ -304,7 +304,7 @@
                 symbol: '-',
                 name: 'Subtraction',
                 description: 'Subtracts the second number from the first number.',
-                example: 'result = 10 - 4  # Returns 6',
+                example: 'result = 10 - 4,
                 defaultA: 10,
                 defaultB: 4
             },
@@ -312,7 +312,7 @@
                 symbol: '*',
                 name: 'Multiplication',
                 description: 'Multiplies two numbers together.',
-                example: 'result = 6 * 7  # Returns 42',
+                example: 'result = 6 * 7',
                 defaultA: 6,
                 defaultB: 7
             },
@@ -320,7 +320,7 @@
                 symbol: '/',
                 name: 'Division',
                 description: 'Divides the first number by the second. Always returns a float.',
-                example: 'result = 15 / 3  # Returns 5.0',
+                example: 'result = 15 / 3',
                 defaultA: 15,
                 defaultB: 3
             },
@@ -328,7 +328,7 @@
                 symbol: '//',
                 name: 'Floor Division',
                 description: 'Divides and rounds down to the nearest integer.',
-                example: 'result = 17 // 5  # Returns 3',
+                example: 'result = 17 // 5',
                 defaultA: 17,
                 defaultB: 5
             },
@@ -336,7 +336,7 @@
                 symbol: '%',
                 name: 'Modulus',
                 description: 'Returns the remainder after division.',
-                example: 'result = 17 % 5  # Returns 2',
+                example: 'result = 17 % 5',
                 defaultA: 17,
                 defaultB: 5
             },
@@ -344,7 +344,7 @@
                 symbol: '**',
                 name: 'Exponentiation',
                 description: 'Raises the first number to the power of the second.',
-                example: 'result = 2 ** 3  # Returns 8',
+                example: 'result = 2 ** 3',
                 defaultA: 2,
                 defaultB: 3
             }
